--- a/TPFINAL/src/Vista/crearProyeccion.form
+++ b/TPFINAL/src/Vista/crearProyeccion.form
@@ -173,7 +173,7 @@
             <Component class="javax.swing.JTable" name="jTable1">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="7" rowCount="4">
+                  <Table columnCount="8" rowCount="4">
                     <Column editable="false" title="Idioma" type="java.lang.Object"/>
                     <Column editable="false" title="3D" type="java.lang.Object"/>
                     <Column editable="false" title="Subtitulos" type="java.lang.Object"/>
@@ -181,10 +181,16 @@
                     <Column editable="false" title="Hora Fin" type="java.lang.Object"/>
                     <Column editable="false" title="Butacas disp" type="java.lang.Object"/>
                     <Column editable="false" title="Precio" type="java.lang.Object"/>
+                    <Column editable="false" title="Estado" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="0">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
                     <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
                       <Title/>
                       <Editor/>
