--- a/TPFINAL/src/Vista/vistaCrearUsuario.form
+++ b/TPFINAL/src/Vista/vistaCrearUsuario.form
@@ -161,7 +161,7 @@
         </Component>
         <Component class="javax.swing.JPasswordField" name="contra2">
           <Properties>
-            <Property name="text" type="java.lang.String" value="jPasswo"/>
+            <Property name="text" type="java.lang.String" value="*******"/>
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="contra2MouseClicked"/>
@@ -169,7 +169,7 @@
         </Component>
         <Component class="javax.swing.JPasswordField" name="contra1">
           <Properties>
-            <Property name="text" type="java.lang.String" value="jPasswo"/>
+            <Property name="text" type="java.lang.String" value="*******"/>
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="contra1MouseClicked"/>
