--- a/TPFINAL/src/Vista/crearSala.form
+++ b/TPFINAL/src/Vista/crearSala.form
@@ -130,7 +130,7 @@
                   <Table columnCount="4" rowCount="4">
                     <Column editable="false" title="Nro de Sala" type="java.lang.Object"/>
                     <Column editable="false" title="3D" type="java.lang.Object"/>
-                    <Column editable="false" title="Capacidad" type="java.lang.Object"/>
+                    <Column editable="false" title="Capacidad Max." type="java.lang.Object"/>
                     <Column editable="false" title="Habilitada" type="java.lang.Object"/>
                   </Table>
                 </Property>
